--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -364,7 +364,7 @@ services:
     restart: unless-stopped
     ports:
       # Pass down internal port because it's set dynamically by other services
-      - 127.0.0.1:${POSTGRES_PORT}:${POSTGRES_PORT}
+      - {POSTGRES_PORT}:${POSTGRES_PORT}
     environment:
       POSTGRES_HOST: /var/run/postgresql
       PGPORT: ${POSTGRES_PORT}
@@ -384,25 +384,25 @@ services:
       # Changes required for Analytics support
       - ./volumes/db/logs.sql:/docker-entrypoint-initdb.d/migrations/99-logs.sql:Z
 
-  vector:
-    container_name: supabase-vector
-    image: timberio/vector:0.28.1-alpine
-    healthcheck:
-      test:
-        [
-
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://vector:9001/health"
-        ]
-      timeout: 5s
-      interval: 5s
-      retries: 3
-    volumes:
-      - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro
-      - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro
-
-    command: [ "--config", "etc/vector/vector.yml" ]
+#  vector:
+#    container_name: supabase-vector
+#    image: timberio/vector:0.28.1-alpine
+#    healthcheck:
+#      test:
+#        [
+#
+#          "CMD",
+#          "wget",
+#          "--no-verbose",
+#          "--tries=1",
+#          "--spider",
+#          "http://vector:9001/health"
+#        ]
+#      timeout: 5s
+#      interval: 5s
+#      retries: 3
+#    volumes:
+#      - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro
+#      - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro
+#
+#    command: [ "--config", "etc/vector/vector.yml" ]
